backend/nodejs-regions/nodejs-prisma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-region
  labels:
    app: nodejs-region
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-region
      tier: backend
  template:
    metadata:
      labels:
        app: nodejs-region
        tier: backend
    spec:
      containers:
        - name: nodejs-region
          image: ngoyarzo/nodejs-region:dev1.0
          ports:
             - containerPort: 3001
          command: ["node", "src/server.js"]
          volumeMounts:
            - name: tls-certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: nodejs-region-tls
