backend/nodejs-regions/nodejs-prisma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-region-svc
  labels:
    app: nodejs-region
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: nodejs-region
    tier: backend
  ports:
    - port: 3001
      targetPort: 3001
