backend/nodejs-regions/nodejs-prisma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-region-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx  # Ajusta según tu ingress controller
  tls:
  - hosts:
    - region.ngo.k3s.lab
    secretName: nodejs-region-tls  # Debe coincidir con tu secret de TLS
  rules:
  - host: region.ngo.k3s.lab.cautiva
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-region-svc
            port:
              number: 3001
